[package]
name = "tictactoe"
version = "0.1.0"
authors = ["Matt Cestarte <matthew.cestarte@runbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.4"
regex = "1"
chrono = "0.4.11"
log = "0.4"
fern = "0.5"
game = { path = "../game" }
